@@ -1,8 +1,16 @@
+Fri Aug 17 13:38:05 UTC 2012  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/Condition_Recursive_Thread_Mutex.h:
+        * ace/Condition_Thread_Mutex.h:
+        * ace/Null_Condition.h:
+        * ace/Synch_Traits.h:
+	  Changes to attempt to fix Solaris9 SUNStudio11 problems.
+
 Fri Aug 17 12:28:32 UTC 2012  Martin Corino  <mcorino@remedy.nl>
 
         * ace/config-hpux-11.00.h:
         * ace/config-linux.h:
-	  Fixes (hopefully) for non-compliant POSIX platforms.
+          Fixes (hopefully) for non-compliant POSIX platforms.
 
 Fri Aug 17 11:19:01 UTC 2012  Martin Corino  <mcorino@remedy.nl>
 
